--- a/.github/workflows/fyra.yml
+++ b/.github/workflows/fyra.yml
@@ -1,4 +1,4 @@
-name: Debug Fyra DeepSeek
+name: Debug Fyra ID
 
 on:
   workflow_dispatch:
@@ -18,37 +18,52 @@ jobs:
       - name: Install Requests
         run: pip install requests
 
-      - name: Run Fyra Test
+      - name: Run Diagnostic
         env:
           FRY: ${{ secrets.FRY }}
         run: |
           cat <<EOF > debug_fyra.py
-          import os
-          import requests
+          import os, requests, json
           
-          # Configuration based on your PDF and input
-          URL = "https://fyra.im/v1/chat/completions"
-          API_KEY = os.environ.get("FRY")
-          MODEL = "deepseek-v3.1"
+          # URL from PDF Page 4
+          URL_MODELS = "https://fyra.im/v1/models"
+          URL_CHAT = "https://fyra.im/v1/chat/completions"
+          KEY = os.environ.get("FRY")
+          TARGET = "deepseek-v3.1"
           
-          print(f"Connecting to {URL} with model {MODEL}...")
+          print("--- FYRA DIAGNOSTIC ---")
           
+          # 1. Check Available Models
+          print(f"1. Checking if API supports '{TARGET}'...")
           try:
-              resp = requests.post(
-                  URL,
-                  headers={"Authorization": f"Bearer {API_KEY}", "Content-Type": "application/json"},
-                  json={
-                      "model": MODEL, 
-                      "messages": [{"role": "user", "content": "Test connection."}]
-                  },
-                  timeout=30
-              )
-              
-              print(f"HTTP Status: {resp.status_code}")
-              print(f"Raw Output: {resp.text}")
-              
+              r = requests.get(URL_MODELS, headers={"Authorization": f"Bearer {KEY}"})
+              if r.status_code == 200:
+                  data = r.json()
+                  all_ids = [m['id'] for m in data.get('data', [])]
+                  ds_ids = [i for i in all_ids if 'deepseek' in i.lower()]
+                  print(f"   Found DeepSeek IDs: {ds_ids}")
+                  
+                  if TARGET in all_ids:
+                      print(f"   ✅ '{TARGET}' is officially supported.")
+                  else:
+                      print(f"   ⚠️ '{TARGET}' NOT found in list. API expects one of the IDs above.")
+              else:
+                  print(f"   Failed to list models: {r.status_code}")
           except Exception as e:
-              print(f"FATAL ERROR: {e}")
+              print(f"   Connection Error: {e}")
+
+          # 2. Test Chat
+          print(f"\n2. Testing Chat with '{TARGET}'...")
+          try:
+              r = requests.post(
+                  URL_CHAT,
+                  headers={"Authorization": f"Bearer {KEY}", "Content-Type": "application/json"},
+                  json={"model": TARGET, "messages": [{"role": "user", "content": "Hi"}]}
+              )
+              print(f"   Status: {r.status_code}")
+              print(f"   Response: {r.text}")
+          except Exception as e:
+              print(f"   Chat Error: {e}")
           EOF
           
           python debug_fyra.py
